Enable extensions logging